--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
+    <meta name="google-signin-client_id" content="651481800238-q8csl3u52lsmf87k3s2bj0nuu7c2dipr.apps.googleusercontent.com" />
+    <meta name="google-signin-scope" content="profile email" />
     <script
       type="module"
       src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"
